--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-generator-scripting-language (4.1.5-1) UNRELEASED; urgency=low
+generator-scripting-language (4.1.5-1) unstable; urgency=low
 
   * Initial packaging. (Closes: #874426)
 
- -- Luca Boccassi <bluca@debian.org>  Sun, 21 Aug 2016 00:00:00 +0000
+ -- Luca Boccassi <bluca@debian.org>  Sat, 14 Oct 2017 18:31:54 +0100
