--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+generator-scripting-language (4.1.5-2~bpo9+1) stretch-backports; urgency=medium
+
+  * Rebuild for stretch-backports.
+
+ -- Luca Boccassi <bluca@debian.org>  Sat, 30 Dec 2017 22:53:21 +0100
+
 generator-scripting-language (4.1.5-2) unstable; urgency=medium
 
   * Add copyright notice for sflstr.c and MIT license.
